# dice_game_cpp

./: .gitignore  CMakeLists.txt  Dinossaurineo  NOTAS.md  scoreboard.txt
src/: main.cpp
